Fix clearable padding style
Adjust padding-right because prevent text from overlapping `×` button.

--- a/less/control.less
+++ b/less/control.less
@@ -118,6 +118,10 @@
 	white-space: nowrap;
 }
 
+.has-value.is-clearable.Select--single > .Select-control .Select-value {
+	padding-right: (@select-clear-width + @select-arrow-width * 5);
+}
+
 .has-value.Select--single > .Select-control .Select-value,
 .has-value.is-pseudo-focused.Select--single > .Select-control .Select-value {
 	.Select-value-label {
